--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Google</title>
+	<title>Google Replica</title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
 
-<div class="nav">
+<div id="nav">
 	<ul class="left">
-		<li>About</li>
-		<li>Store</li>
+		<li>
+			<a href="">About</a>
+		</li>
+		<li>
+			<a href="">Store</a>
+		</li>
 	</ul>
 	<ul class="right">
-		<li>Gmail</li>
-		<li>Images</li>
+		<li>
+			<a href="">Images</a>
+		</li>
+		<li>
+			<a href="">Gmail</a>
+		</li>
+		<li>
+			<img class="google-apps" href="#" src="https://cdn1.iconfinder.com/data/icons/material-core/16/apps-512.png">
+		</li>
+		<li>
+			<img class="gmail-bell" href="#" src="https://app.ninjaoutreach.com/Content/images/gmail-bell.png">
+		</li>
+		<li>
+			<a class="sign-in"href="#">Sign In</a>
+		</li>
 	</ul>
 </div>
 
 <main>
 	<div class="logo">
-		<img>
+		<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 	</div>
-	<div class="search">
-		<input>
+	<div class="searchbar">
+    	<img class="mic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/2000px-Google_mic.svg.png" alt="">
+    	<input type="text">
+	</div>
+
+	<div class="buttons">
+		<button>Google Search</button>
+		<button>I'm Feeling Lucky</button>
 	</div>
 	
 </main>
